feat: Reports of zip import - EXO-65201

--- a/documents-webapp/src/main/resources/locale/portlet/Documents_fr.properties
+++ b/documents-webapp/src/main/resources/locale/portlet/Documents_fr.properties
@@ -321,3 +321,5 @@ import.drawer.fileType.error=Vous devez fournir un fichier zip
 import.drawer.maxFileSize.error=Limite de taille maximale d\u00E9pass\u00E9e
 documents.details.view.label=Vue 
 documents.details.views.label={0} vues
+documents.label.btn.upload.zip.tooltip=Import \u00E0 partir du Zip
+documents.label.btn.upload.zip.disabled.tooltip=Plusieurs traitements sont d\u00E9j\u00E0 en cours pour d'autres utilisateurs. Merci de relancer ce traitement dans quelques minutes apr\u00E8s rechargement de la page.
