--- a/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
+++ b/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
@@ -319,5 +319,7 @@ documents.label.upload.zip.more.failed=Failed Documents
 document.multiple.import.action.message=Click here to see the import status
 import.drawer.fileType.error=You should provide a zip file
 import.drawer.maxFileSize.error=Max size  error
+documents.label.btn.upload.zip.tooltip=Import From Zip
+documents.label.btn.upload.zip.disabled.tooltip=Several jobs are already being processed for other users. Please try the import again in a few minutes.
 documents.details.view.label=View
 documents.details.views.label={0} views
