--- a/documents-webapp/src/main/resources/locale/notification/DocumentsNotification_en.properties
+++ b/documents-webapp/src/main/resources/locale/notification/DocumentsNotification_en.properties
@@ -7,6 +7,9 @@ UINotification.label.ImportDocumentsPlugin=When you import documents from zip
 #web
 Notification.documents.document.shared={0} has assigned you as collaborator for {1}
 Notification.documents.document.imported={0} documents where imported in folder {1}
+Notification.documents.document.imported.susssfully={0} documents where imported in folder {1}
+Notification.documents.document.imported.withErrors=The import is done. At least one element has failed please check the results
+Notification.documents.document.import.failed=Document import fails
 #mail
 Notification.label.SayHello=Hi
 Notification.label.footer=This email was sent to you as eXo Platform member.<a target="_blank" style="margin:30px 0 10px 0; color: #2f5e92;text-decoration: none;font-size:13px;font-family:HelveticaNeue,arial,tahoma,serif" href="{0}"> Click here</a> to change your notification settings.
