--- a/documents-webapp/src/main/resources/locale/notification/DocumentsNotification_fr.properties
+++ b/documents-webapp/src/main/resources/locale/notification/DocumentsNotification_fr.properties
@@ -18,9 +18,9 @@ Notification.subject.AddDocumentCollaboratorPlugin=Un document a \u00E9t\u00E9 p
 Notification.label.openDocument=Ouverture de document
 
 Notification.title.ImportDocumentsPlugin=Un import de documents est effectu\u00E9. Rapport envoy\u00E9 par email
-Notification.subject.ImportDocumentsPlugin=Documents import\u00E9s \u00E0 partir du zip
-Notification.label.openFolder=Ouvrir le dossier
-Notification.import.mail.message=Nous finissons de traiter votre fichier zip et de l'importer dans eXo.
+Notification.subject.ImportDocumentsPlugin=Documents import\u00E9s
+Notification.label.openFolder=Acc\u00E9der au dossier
+Notification.import.mail.message=L'import de documents a \u00E9t\u00E9 r\u00E9alis\u00E9 avec succ\u00E8s.
 Notification.import.mail.message1=L'import a dur\u00E9 {0} secondes.
 Notification.import.mail.message2=Nous avons import\u00E9 {0} documents:
 Notification.import.mail.title.created=Documents Cr\u00E9\u00E9s
