feat: Import done - EXO-65202

--- a/documents-webapp/src/main/resources/locale/notification/DocumentsNotification_fr.properties
+++ b/documents-webapp/src/main/resources/locale/notification/DocumentsNotification_fr.properties
@@ -6,8 +6,8 @@ UINotification.title.ImportDocumentsPlugin=Documents import\u00E9s \u00E0 partir
 UINotification.label.ImportDocumentsPlugin=Lorsque vous importez des documents \u00E0 partir de zip
 #web
 Notification.documents.document.shared={0} vous a affect\u00E9 en tant que collaborateur sur {1}
-Notification.documents.document.imported.susssfully={0} les documents sont import\u00E9s dans le dossier {1}
-Notification.documents.document.imported.withErrors=L'import est termin\u00E9. Au moins un élément a échoué. Veuillez vérifier le résultat.
+Notification.documents.document.imported.susssfully={0} documents sont import\u00E9s dans le dossier {1}
+Notification.documents.document.imported.withErrors=L'import est termin\u00E9. Au moins un ï¿½lï¿½ment a ï¿½chouï¿½. Veuillez vï¿½rifier le rï¿½sultat.
 Notification.documents.document.import.failed=Aucun \u00E9l\u00E9ment import\u00E9
 #mail
 Notification.label.SayHello=Bonjour
@@ -16,13 +16,12 @@ Notification.label.CompanyName=eXoPlatform
 Notification.title.AddDocumentCollaboratorPlugin=Un document a \u00E9t\u00E9 partag\u00E9 avec vous
 Notification.subject.AddDocumentCollaboratorPlugin=Un document a \u00E9t\u00E9 partag\u00E9 avec vous
 Notification.label.openDocument=Ouverture de document
-
 Notification.title.ImportDocumentsPlugin=Un import de documents est effectu\u00E9. Rapport envoy\u00E9 par email
 Notification.subject.ImportDocumentsPlugin=Documents import\u00E9s
 Notification.label.openFolder=Acc\u00E9der au dossier
 Notification.import.mail.message=L'import de documents a \u00E9t\u00E9 r\u00E9alis\u00E9 avec succ\u00E8s.
 Notification.import.mail.message1=L'import a dur\u00E9 {0} secondes.
-Notification.import.mail.message2=Nous avons import\u00E9 {0} documents:
+Notification.import.mail.message2={0} documents ont été importés : 
 Notification.import.mail.title.created=Documents Cr\u00E9\u00E9s
 Notification.import.mail.title.duplicated=Documents Dupliqu\u00E9s
 Notification.import.mail.title.updated=Documents Mis \u00E0 jour
