--- a/documents-webapp/src/main/resources/locale/notification/DocumentsNotification_fr.properties
+++ b/documents-webapp/src/main/resources/locale/notification/DocumentsNotification_fr.properties
@@ -6,7 +6,9 @@ UINotification.title.ImportDocumentsPlugin=Documents import\u00E9s \u00E0 partir
 UINotification.label.ImportDocumentsPlugin=Lorsque vous importez des documents \u00E0 partir de zip
 #web
 Notification.documents.document.shared={0} vous a affect\u00E9 en tant que collaborateur sur {1}
-Notification.documents.document.imported={0} les documents sont import\u00E9s dans le dossier {1}
+Notification.documents.document.imported.susssfully={0} documents sont import\u00E9s dans le dossier {1}
+Notification.documents.document.imported.withErrors=L'import est termin\u00E9. Au moins un \u00E9l\u00E9ment a \u00E9chou\u00E9. Veuillez v\u00E9rifier le r\u00E9sultat.
+Notification.documents.document.import.failed=Aucun \u00E9l\u00E9ment import\u00E9
 #mail
 Notification.label.SayHello=Bonjour
 Notification.label.footer=Cet e-mail vous a \u00E9t\u00E9 envoy\u00E9 en tant que membre de eXo Platform.<a target="_blank" style="margin:30px 0 10px 0; color: #2f5e92;text-decoration: none;font-size:13px;font-family:HelveticaNeue,arial,tahoma,serif" href="{0}"> Cliquez ici</a> pour modifier vos param\u00E8tres de notification.
@@ -14,12 +16,12 @@ Notification.label.CompanyName=eXoPlatform
 Notification.title.AddDocumentCollaboratorPlugin=Un document a \u00E9t\u00E9 partag\u00E9 avec vous
 Notification.subject.AddDocumentCollaboratorPlugin=Un document a \u00E9t\u00E9 partag\u00E9 avec vous
 Notification.label.openDocument=Ouverture de document
-Notification.title.ImportDocumentsPlugin=Documents import\u00E9s \u00E0 partir du zip
-Notification.subject.ImportDocumentsPlugin=Documents import\u00E9s \u00E0 partir du zip
-Notification.label.openFolder=Ouvrir le dossier
-Notification.import.mail.message=Nous finissons de traiter votre fichier zip et de l'importer dans eXo.
+Notification.title.ImportDocumentsPlugin=Un import de documents est effectu\u00E9. Rapport envoy\u00E9 par email
+Notification.subject.ImportDocumentsPlugin=Documents import\u00E9s
+Notification.label.openFolder=Acc\u00E9der au dossier
+Notification.import.mail.message=L'import de documents a \u00E9t\u00E9 r\u00E9alis\u00E9 avec succ\u00E8s.
 Notification.import.mail.message1=L'import a dur\u00E9 {0} secondes.
-Notification.import.mail.message2=Npus avons import\u00E9 {0} documents avec succ\u00E8s.
+Notification.import.mail.message2={0} documents ont été importés : 
 Notification.import.mail.title.created=Documents Cr\u00E9\u00E9s
 Notification.import.mail.title.duplicated=Documents Dupliqu\u00E9s
 Notification.import.mail.title.updated=Documents Mis \u00E0 jour
