--- a/documents-webapp/src/main/resources/locale/portlet/Documents_fr.properties
+++ b/documents-webapp/src/main/resources/locale/portlet/Documents_fr.properties
@@ -284,15 +284,15 @@ documents.myDrive.visibility.specific.collaborators=Moi et les collaborateurs d\
 documents.myDrive.visibility.public.access=Les collaborateurs et acc\u00E8s public
 documents.myDrive.label.visibility.specific.collaborator=Seuls moi et les collaborateurs d\u00E9sign\u00E9s
 documents.myDrive.label.visibility.public.access=Moi et les personnes avec le lien peuvent le voir
-documents.label.upload.zip.choice=Choisissez le fichier zip \u00E0 importer
+ddocuments.label.upload.zip.choice=Choisissez le fichier zip \u00E0 importer
 documents.label.button.continue=Continuez
 documents.drawer.upload.zip.title=Uploadez le fichier zip des documents
 documents.label.zip.choice.sub.title=Zip import\u00E9
 documents.label.upload.zip.rules=R\u00E8gle de gestion des doublons
 documents.label.upload.zip.rules.description=Choisir les règles appliqu\u00E8es en cas d'\u00E9l\u00E9ments d\u00E9j\u00E0 existants
 documents.label.upload.zip.rules.update=Mise \u00E0 jour des fichiers existants (cr\u00E9ation d'une nouvelle version)
-documents.label.upload.zip.rules.duplicate=Dupliquer les \u00E9l\u00E9ments : l'\u00E9l\u00E9ment est import\u00E9 et (1) est ajout\u00E9 \u00E0 la fin. Le num\u00E9ro est incr\u00E9ment\u00E9 s'il est d\u00E9j\u00E0 pr\u00E9sent. Pour un dossier, on n'ajoute pas (1) dans le contenu du dossier.
-documents.label.upload.zip.rules.ignore=Ignorer les éléments : l'élément est sauté
+documents.label.upload.zip.rules.duplicate=Dupliquer les \u00E9l\u00E9ments
+documents.label.upload.zip.rules.ignore=Ignorer les \u00E9l\u00E9ments
 documents.label.button.back=Retour
 documents.label.zip.upload=Importer
 documents.label.button.close=Fermer
@@ -304,12 +304,15 @@ documents.label.zip.attachments.maxFileSize=Taille maximale du fichier : {0} Mo
 documents.label.zip.attachments.upload.description=Cliquez sur pour ouvrir le navigateur afin de s\u00E9lectionner votre fichier
 documents.label.upload.zip=Import \u00E0 partir du Zip
 documents.import.status.unzipping=D\u00E9compression du fichier
-documents.import.status.creating_documents=Creation des documents
-documents.import.status.done_successfully=Documents cr\u00E9\u00E9s avec succ\u00E8s
-documents.import.status.failed=Echec de l'import des documents
-documents.import.message.doneSuccessfully=Les {0} documents sont import\u00E9s avec succ\u00E8s
-documents.import.cannotUnzipFile=Impossible de d\u00E9compresser le fichier zip fourni, il semble \u00eatre endommag\u00E9 !
-documents.import.status.cannot_unzip_file=Le zip fourni ne peut pas être du00E9compress\u00E9.
+documents.import.status.creating_documents=Creation des documents en cours...
+documents.import.status.done_successfully=L'import est termin\u00E9
+documents.import.status.done_with_errors=L'import est termin\u00E9
+documents.import.status.failed=L'import des documents a \u00E9chou\u00E9
+documents.import.message.doneSuccessfully=Les {0}  \u00E9l\u00E9ments sont import\u00E9s avec succ\u00E8s
+documents.import.message.failed=Aucun \u00E9l\u00E9ment import\u00E9
+documents.import.message.doneWithErrors=L'import est termin\u00E9. Au moins un élément a échoué. Veuillez vérifier le résultat.
+documents.import.cannotUnzipFile=L'importation a \u00E9chou\u00E9 car nous ne sommes pas en mesure de d\u00E9compresser le fichier.
+documents.import.status.cannot_unzip_file=Le fichier zip ne peut pas \u00EAtre d\u00E9compress\u00E9
 documents.import.show.details=Afficher les d\u00E9tails
 documents.label.upload.zip.more.created=Documents cr\u00E9\u00E9s
 documents.label.upload.zip.more.ignored=Documents ignor\u00E9s
@@ -317,9 +320,12 @@ documents.label.upload.zip.more.duplicated=Documents dupliqu\u00E9s
 documents.label.upload.zip.more.updated=Documents mis \u00E0 jour
 documents.label.upload.zip.more.failed=Documents \u00E9chou\u00E9s
 document.multiple.import.action.message=Cliquez ici pour voir le statut de l'import
+documents.import.confirmCancel.title=Annuler l'upload?
+documents.import.confirmCancel.message=L'upload sera interrompu. Voulez-vous quitter?
 import.drawer.fileType.error=Vous devez fournir un fichier zip
 import.drawer.maxFileSize.error=Limite de taille maximale d\u00E9pass\u00E9e
 documents.details.view.label=Vue 
 documents.details.views.label={0} vues
+import.drawer.fileUpload.error=Une erreur s'est produite lors du chargement du zip 
 documents.label.btn.upload.zip.tooltip=Import \u00E0 partir du Zip
 documents.label.btn.upload.zip.disabled.tooltip=Plusieurs traitements sont d\u00E9j\u00E0 en cours pour d'autres utilisateurs. Merci de relancer ce traitement dans quelques minutes apr\u00E8s rechargement de la page.
