backport Documents addon indoensian transaltions

--- a/documents-webapp/src/main/resources/locale/portal/webui_id.properties
+++ b/documents-webapp/src/main/resources/locale/portal/webui_id.properties
@@ -15,7 +15,8 @@
 # along with this program.  If not, see <gnu.org/licenses>.
 #
 
-documents.switchToNewDocuments=Switch to Recent view
-documents.switchToOldDocuments=Switch to Folder view
-documents.switchToNewDocuments.title=Display documents in the Recent view
-documents.switchToOldDocuments.title=Display documents in the folder view
+documents.switchToNewDocuments=Beralih ke tampilan Terbaru
+documents.switchToOldDocuments=Beralih ke tampilan Folder
+documents.switchToNewDocuments.title=Tampilkan dokumen dalam tampilan Terbaru
+documents.switchToOldDocuments.title=Tampilkan dokumen dalam tampilan Folder
+Documents.label.name=Dokumen
