feat: Documents_basic actions_US: Go to location - EXO-70176

--- a/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
+++ b/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
@@ -59,6 +59,7 @@ documents.filter.favorites=Favorites
 documents.label.extendSearch=Extend search to content
 documents.label.quickFilter=Quick filter
 document.label.edit=Edit
+document.label.go.location=Go to location
 documents.label.download=Download
 document.label.rename=Rename
 documents.label.menu.action.tooltip=Show actions
