fix: Display file size including version size in DocumentsSizeGadget - EXO-70223
Before this modification, the document size gadget compute size without take care of file versions
This change add a field in file index to store fileSizeWithVersion

--- a/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
+++ b/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
@@ -332,3 +332,6 @@ documents.label.btn.upload.zip.disabled.tooltip=Several jobs are already being p
 documents.details.view.label=View
 documents.details.views.label={0} views
 documents.details.view.location=Location
+documents.label.seeMore=See more
+documents.label.largeDocumentHeader.title=10 Biggest documents
+documents.label.largeDocumentHeader.header=Document size includes versions size
