--- a/documents-webapp/src/main/resources/locale/portlet/Documents_fr.properties
+++ b/documents-webapp/src/main/resources/locale/portlet/Documents_fr.properties
@@ -329,3 +329,6 @@ documents.label.btn.upload.zip.tooltip=Import de dossiers et documents
 documents.label.btn.upload.zip.disabled.tooltip=Plusieurs imports sont d\u00E9j\u00E0 en cours par d'autres utilisateurs. Veuillez r\u00E9essayer dans quelques minutes. 
 documents.details.view.label=Vue 
 documents.details.views.label={0} vues
+documents.label.seeMore=Voir plus
+documents.label.largeDocumentHeader.title=10 Documents les plus volumineux
+documents.label.largeDocumentHeader.header=La taille indiqu\u00E9e inclue les versions des documents
