fix: Display file size including version size in DocumentsSizeGadget - EXO-70223
Before this modification, the document size gadget compute size without take care of file versions
This change add a field in file index to store fileSizeWithVersion

--- a/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
+++ b/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
@@ -330,3 +330,6 @@ documents.label.btn.upload.zip.tooltip=Import folders and documents
 documents.label.btn.upload.zip.disabled.tooltip=Several jobs are already being processed for other users. Please try the import again in a few minutes.
 documents.details.view.label=View
 documents.details.views.label={0} views
+documents.label.seeMore=See more
+documents.label.largeDocumentHeader.title=10 Biggest documents
+documents.label.largeDocumentHeader.header=Document size includes versions size
