feat: Documents_basic actions: Open in read-only - EXO-70175

--- a/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
+++ b/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
@@ -60,6 +60,7 @@ documents.label.extendSearch=Extend search to content
 documents.label.quickFilter=Quick filter
 document.label.edit=Edit
 document.label.go.location=Go to location
+document.label.open.read.only=Open in read-only
 documents.label.download=Download
 document.label.rename=Rename
 documents.label.menu.action.tooltip=Show actions
