feat: Documents_details_US: Location - EXO-70177

--- a/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
+++ b/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
@@ -331,3 +331,4 @@ documents.label.btn.upload.zip.tooltip=Import folders and documents
 documents.label.btn.upload.zip.disabled.tooltip=Several jobs are already being processed for other users. Please try the import again in a few minutes.
 documents.details.view.label=View
 documents.details.views.label={0} views
+documents.details.view.location=Location
