fix: Display file size including version size in DocumentsSizeGadget - EXO-70223
Before this modification, node which are not mix:versionnable have a size with version = 0
This modification return the document size in this case.

It also add a loading state in documentList drawer

It also add the size with versions in the documentInfoDrawer

--- a/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
+++ b/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
@@ -69,6 +69,7 @@ documents.close=Close
 documents.label.show.details=Show details
 documents.drawer.details.title=Details
 documents.drawer.details.size=Size
+documents.drawer.details.sizeWithVersions=Size (including versions)
 documents.drawer.details.modified=Modified
 documents.drawer.details.created=Created
 documents.drawer.details.by=by
