--- a/documents-webapp/src/main/resources/locale/portlet/Documents_fr.properties
+++ b/documents-webapp/src/main/resources/locale/portlet/Documents_fr.properties
@@ -67,6 +67,7 @@ documents.close=Fermer
 documents.label.show.details=Afficher d\u00E9tails
 documents.drawer.details.title=D\u00E9tails
 documents.drawer.details.size=Taille 
+documents.drawer.details.sizeWithVersions=Taille (versions incluses)
 documents.drawer.details.modified=Mis \u00E0 jour 
 documents.drawer.details.created=Cr\u00E9\u00E9 
 documents.drawer.details.by=par
