--- a/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
+++ b/documents-webapp/src/main/resources/locale/portlet/Documents_en.properties
@@ -93,6 +93,7 @@ documents.drawer.tree=Folder tree
 documents.label.extension.visibility=Access
 documents.label.visibility.specific.collaborator=Only hosts and designated collaborators can  view and edit
 documents.label.visibility.all=All space member can edit
+documents.label.visibility.system=System folder edition is locked
 documents.label.visibility.specific.manger=Only hosts and redactors can edit
 documents.label.visibility=Manage access
 documents.label.visibilityTitle=Manage access to: {0}
